Fixed horizontal scrolling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+@media only screen and (max-width: 762px){
+  html{
+    overflow-x: hidden;
+  }
+  ::-webkit-scrollbar{
+    display:none;
+  }
+}
+
 /* COLOR THEMES */
 .blue-bg{
   background-color: #3185bd;
